--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -13,6 +13,15 @@
     body {
       padding: 0;
       margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f0f0f0;
+    }
+    img {
+      max-width: 100%;
+      max-height: 100%;
     }
   </style>
 </head>
